@@ -153,7 +153,7 @@ class Smarty_Internal_CacheResource_File extends Smarty_CacheResource {
             $_cacheDirs = new RecursiveDirectoryIterator($_dir);
             $_cache = new RecursiveIteratorIterator($_cacheDirs, RecursiveIteratorIterator::CHILD_FIRST);
             foreach ($_cache as $_file) {
-                if (substr($_file->getBasename(),0,1) == '.') continue; 
+                if (substr($_file->getBasename(),0,1) == '.' || strpos($_file, '.svn') !== false) continue; 
                 // directory ?
                 if ($_file->isDir()) {
                     if (!$_cache->isDot()) {
